fix ping go-doc bug
